content/terraform-cdk/v0.16.x/docs/cdktf/test/unit-tests.mdx
---
page_title: Unit Tests - CDK for Terraform
description: Write assertions and snapshot tests for your CDK for Terraform application.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-04-29T15:45:46-05:00
last_modified: 2025-04-29T15:45:46-05:00
# END AUTO GENERATED METADATA
---

# Unit Tests

Testing your application can give you faster feedback cycles and guard you against unwanted changes. Testing is currently supported in Typescript with jest and compatible with any testing framework that supports assertions for all other languages.

We generate all files necessary to start testing when you run `cdktf init` so that you can start writing tests right away.

## Add Testing to Your Application

If you would like to add testing to an existing project, refer the following resources according to your chosen language:

- **TypeScript:** Follow TypeScript's [Getting Started guide](https://jestjs.io/docs/getting-started) for testing with Jest. Then, add these lines in a [setup file](https://jestjs.io/docs/configuration#setupfiles-array):

  ```js
  const cdktf = require("cdktf");
  cdktf.Testing.setupJest();
  ```

- **Python:** Follow the [Get Started guide](https://docs.pytest.org/en/7.1.x/getting-started.html) for pytest. The assertions for CDKTF are available in the `cdktf` package under `Testing`.
- **Java:** Follow the [Using JUnit documentation](https://maven.apache.org/plugins-archives/maven-surefire-plugin-2.12.4/examples/junit.html). The assertions for CDKTF specific are available in the `cdktf` package under `Testing`.
- **C#:** Follow the [Getting Started with xUnit.net guide](https://xunit.net/docs/getting-started/netcore/cmdline). The assertions for CDKTF are available in the `cdktf` package under `Testing`.
- **Go:** Follow the [Add a Test guide](https://go.dev/doc/tutorial/add-a-test) in the Go documentation. The assertions for CDKTF specific are available in the `cdktf` package under `Testing`.

### Write Assertions

The following Typescript example uses `Testing.synth` to test a part of the application. Given the desired scope to test, a JSON string representing the synthesized HCL-JSON is returned. Then the custom assertions under `Testing` in the cdktf package can be used to verify the code acts as intended. `Testing.synth` can test the `Stack` that extends the `TerraformStack`.

The other examples use `Testing.synthScope` to test a part of the application. This creates a scope to test a subset of the application and returns a JSON string representing the synthesized HCL-JSON. Then it uses custom matchers to verify the code acts as intended. `Testing.synthScope` can test the `Constructs` that extends the `IConstruct`.

Examples in

- `toHaveResource`: Checks if a certain resource exists
- `toHaveResourceWithProperties`: Checks if a certain resource exists with all properties passed
- `toHaveDataSource`: Checks if a certain data source exists
- `toHaveDataSourceWithProperties`: Checks if a certain data source exists with all properties passed
- `toHaveProvider`: Checks if a certain provider exists
- `toHaveProviderWithProperties`: Checks if a certain provider exists with all properties passed

<CodeTabs>

```ts
import { Testing } from "cdktf";
import { Image } from "../.gen/providers/docker/image";
import { Container } from "../.gen/providers/docker/container";
import MyApplicationsAbstraction from "../app"; // Could be a class extending from Construct

describe("Unit testing using assertions", () => {
  it("should contain a container", () => {
    const app = Testing.app();
    const stack = new MyApplicationsAbstraction(app, "my-app", {});
    const synthesized = Testing.synth(stack);

    expect(synthesized).toHaveResource(Container);
  });

  it("should use an ubuntu image", () => {
    const app = Testing.app();
    const stack = new MyApplicationsAbstraction(app, "my-app", {});
    const synthesized = Testing.synth(stack);

    expect(synthesized).toHaveResourceWithProperties(Image, {
      name: "ubuntu:latest",
    });
  });
});
```

```python
import pytest
from cdktf import Testing
from imports.docker.image import Image
from imports.docker.container import Container
from app import MyApplicationsAbstraction # Could be a class extending from Construct

class TestApplication:

  stack = TerraformStack(Testing.app(), "stack")
  app_abstraction = MyApplicationsAbstraction(stack, "app-abstraction")
  synthesized = Testing.synth(stack)

  def test_should_contain_container(self):
    assert Testing.to_have_resource(self.synthesized, Container.TF_RESOURCE_TYPE)

  def test_should_use_an_ubuntu_image(self):
    assert Testing.to_have_resource_with_properties(self.synthesized, Image.TF_RESOURCE_TYPE, {
            "name": "ubuntu:latest",
    })
```

```java
import org.junit.jupiter.api.Test;
import static org.junit.jupiter.api.Assertions.assertTrue;
import com.hashicorp.cdktf.Testing;
import imports.docker.Container;
import imports.docker.Image;
import com.hashicorp.cdktf.MyApplicationsAbstraction; // Could be a class extending from Construct

public class TestApplication {

  private final TerraformStack stack = new TerraformStack(Testing.app(), "stack");
  private final MyApplicationsAbstraction appAbstraction = new MyApplicationsAbstraction(stack, "resource");
  private final String synthesized = Testing.synth(stack);

  @Test
  void shouldContainContainer() {
    assertTrue(Testing.toHaveResource(synthesized, Container.TF_RESOURCE_TYPE) );
  }

  @Test
  void shouldUseUbuntuImage() {
    assertTrue(Testing.toHaveResourceWithProperties(synthesized, Image.TF_RESOURCE_TYPE, new HashMap<String, Object>() {
                {
                    put("name", "ubuntu:latest");
                }
    }) );
  }
}
```

```csharp
using Xunit;
using HashiCorp.Cdktf; // MyApplicationsAbstraction - Could be a class extending from Construct
using MyCompany.MyApp;
using System;
using System.Collections.Generic;
using docker.Image;
using docker.Container;

namespace MyCompany.MyApp{
  public class TestApplication{

    private static TerraformStack stack = new TerraformStack(Testing.app(), "stack");
    private static MyApplicationsAbstraction appAbstraction = new MyApplicationsAbstraction(stack, "resource");
    private static string synthesized = Testing.synth(stack);

    [Fact]
    public void ShouldContainContainer(){
      Assert.True(Testing.ToHaveResource(synthesized, Container.TfResourceType) );
    }

    [Fact]
    public void shouldUseUbuntuImage(){
      Assert.True(Testing.ToHaveResourceWithProperties(synthesized, Image.TfResourceType, new Dictionary<String, Object>() {
              {"name", "ubuntu:latest"}
      }) );
    }
  }
}
```

```go
package main

import (
	"testing"
	"cdk.tf/go/stack/generated/kreuzwerker/docker/image"
	"cdk.tf/go/stack/generated/kreuzwerker/docker/container"
	"github.com/hashicorp/terraform-cdk-go/cdktf"
	"github.com/aws/jsii-runtime-go"
)

var stack = NewMyApplicationsAbstraction(cdktf.Testing_App(nil), "stack")
var synth = cdktf.Testing_Synth(stack)

func TestShouldContainContainer(t *testing.T){
	assertion := cdktf.Testing_ToHaveResource(synth, container.Container_TfResourceType())

	if !*assertion  {
		t.Error("Assertion Failed")
	}
}

func TestShouldUseUbuntuImage(t *testing.T){
	properties := map[string]interface{}{
		"name": "ubuntu:latest",
	}
	assertion := cdktf.Testing_ToHaveResourceWithProperties(synth, image.Image_TfResourceType(), &properties)

	if !*assertion  {
		t.Error("Assertion Failed")
	}
}
```

</CodeTabs>

### Snapshot Testing

Snapshot tests are useful when you want to make sure your infrastructure does not change unexpectedly. Snapshot Testing is only supported in Typescript with Jest. Refer to the [Jest docs](https://jestjs.io/docs/snapshot-testing) for details.

```typescript
import { Testing } from "cdktf";
import { Image } from "../.gen/providers/docker/image";
import { Container } from "../.gen/providers/docker/container";
import MyApplicationsAbstraction from "../app"; // Could be a class extending from Construct

describe("Unit testing using snapshots", () => {
  it("Tests a custom abstraction", () => {
    expect(
      Testing.synthScope((stack) => {
        const app = new MyApplicationsAbstraction(scope, "my-app", {});
        app.addEndpoint("127.0.0.1"); // This could be a method your class exposes
      })
    ).toMatchInlineSnapshot(); // There is also .toMatchSnapshot() to write the snapshot to a file
  });
});
```

### Integration with Terraform

You can produce invalid Terraform configuration if you are using escape hatches in your CDK for Terraform application. You may use an escape hatch when setting up a [remote backend](/terraform/cdktf/concepts/remote-backends) or when [overriding resource attributes](/terraform/cdktf/concepts/resources#escape-hatch)

To test this, you can assert that [`terraform validate`](/terraform/cli/commands/validate) or [`terraform plan`](/terraform/cli/commands/plan) run successfully on all or part of your application before running `cdktf plan` or `cdktf deploy`.

Currently only Typescript is capable of testing for successful plans, while all languages are capable of testing for validity of the Terraform produced.

<CodeTabs>

```ts
import { Testing } from "cdktf";

describe("Checking validity", () => {
  it("check if the produced terraform configuration is valid", () => {
    const app = Testing.app();
    const stack = new TerraformStack(app, "test");

    const myAbstraction = new MyApplicationsAbstraction(stack, "my-app", {});
    myAbstraction.addEndpoint("127.0.0.1"); // This could be a method your class exposes

    // We need to do a full synth to validate the terraform configuration
    expect(Testing.fullSynth(stack)).toBeValidTerraform();
  });

  it("check if this can be planned", () => {
    const app = Testing.app();
    const stack = new TerraformStack(app, "test");

    const myAbstraction = new MyApplicationsAbstraction(stack, "my-app", {});
    myAbstraction.addEndpoint("127.0.0.1"); // This could be a method your class exposes

    // We need to do a full synth to plan the terraform configuration
    expect(Testing.fullSynth(stack)).toPlanSuccessfully();
  });
});
```

```python
import pytest
from cdktf import Testing
from app import MyApplicationsAbstraction # Could be a class extending from Construct

class TestApplication:

  stack = TerraformStack(Testing.app(), "stack")
  app_abstraction = MyApplicationsAbstraction(stack, "app-abstraction")

  def test_check_validity(self):
    # We need to do a full synth to validate the terraform configuration
    assert Testing.to_be_valid_terraform(Testing.full_synth(stack))
```

```java
import org.junit.jupiter.api.Test;
import static org.junit.jupiter.api.Assertions.assertTrue;
import com.hashicorp.cdktf.MyApplicationsAbstraction; // Could be a class extending from Construct

public class TestApplication {

  private final TerraformStack stack = new TerraformStack(Testing.app(), "stack");
  private final MyApplicationsAbstraction appAbstraction = new MyApplicationsAbstraction(stack, "resource");

  @Test
  void checkValidity() {
    // We need to do a full synth to validate the terraform configuration
    assertTrue(Testing.toBeValidTerraform(Testing.fullSynth(stack)) );
  }
}
```

```csharp
using Xunit;
using HashiCorp.Cdktf; // MyApplicationsAbstraction - Could be a class extending from Construct
using MyCompany.MyApp;
using System;

namespace MyCompany.MyApp{
  public class TestApplication{

    private static TerraformStack stack = new TerraformStack(Testing.app(), "stack");
    private static MyApplicationsAbstraction appAbstraction = new MyApplicationsAbstraction(stack, "construct");

    [Fact]
    public void CheckValidity(){
      // We need to do a full synth to validate the terraform configuration
      Assert.True(Testing.ToBeValidTerraform(Testing.FullSynth(stack)) );
    }
  }
}
```

```go
package main

import (
	"testing"
	"github.com/hashicorp/terraform-cdk-go/cdktf"
	"github.com/aws/jsii-runtime-go"
)

var stack = cdktf.NewTerraformStack(cdktf.Testing_App(nil), "stack")

func TestCheckValidity(t *testing.T){
  // We need to do a full synth to validate the terraform configuration
	assertion := cdktf.Testing_ToBeValidTerraform(cdktf.Testing_FullSynth(stack))

	if !*assertion  {
		t.Error("Assertion Failed")
	}
}
```

</CodeTabs>

## Integration Testing

CDK for Terraform does not currently offer many helpers for integration testing, but you can create them for your use cases. Here is a recent example: [CDK Day 2021](https://github.com/ansgarm/talk-cdkday-2021/tree/master/test).
